--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "aave--pool-v3---arbitrum"]
 	path = aave--pool-v3---arbitrum
-	url = https://github.com/LimaRods/AAVE-V3-Subgraph-and-Adapter/aave--pool-v3---arbitrum.git
+	url = https://github.com/LimaRods/AAVE-V3-Subgraph-and-Adapter
